--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,32 @@
-#number-form {
-    display: table-column;
+/*#number-form {
+    background-color: white;
+}*/
+
+.heading {
+    box-sizing: border-box;
+}
+
+h1 {
+    font-family: 'Source Code Pro', monospace;
+}
+
+img,
+embed,
+object,
+video {
+    max-width: 100%;
+}
+
+#btn {
+    background-color: gray;
+    border: none;
+    color: light-green;
+    font-weight: bold;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 
 body {
